--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <h1 >Dhenifer Cioffi Flora</h1>
   <h2>Analista de desenvolvimento e sistema</h2>
   <h3>Via dos Indaias N:41 CEP: 13317-256 - Cabreúva</h3>
-  <a href="dhenifercioffiflora@gmail.com">dhenifercioffiflora&#64.,gmail.com</a>
+  <a href="dhenifercioffiflora@gmail.com">dhenifercioffiflora&#64;gmail.com</a>
   <h4> (11) 9-97795-5885</h4>
 
   <div class="foto">
